fix dark mode glitch and add agentless badges

--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -35,6 +35,20 @@
         color: white;
 
     }
+
+    .home-card-heading{
+        color: black;
+    }
+
+    .use-cases-container {
+        background-color: white;
+      }
+
+      .home-section-7 {
+        background-color: white;
+      }
+
+
 }
 
 .contact_tab {
